# ShadowScan

./: .gitignore  README.md
backend/: Cargo.toml
backend/.sqlx/: query-9d36b91a1b622c5a763639d9dcdd8c0a668fdb198f86bb43c3476d6e3de46600.json
backend/src/: errors.rs  lib.rs  main.rs
backend/src/auth/: jwt.rs
backend/src/db/: feedback_repo.rs  mod.rs  scan_repo.rs  user_repo.rs
backend/src/handlers/: feedback.rs  mod.rs  scan.rs
backend/src/models/: feedback.rs  scan.rs
frontend/: .gitignore
frontend/src/: App.tsx  index.css
frontend/src/components/: AIAssistant.tsx  Dashboard.tsx  ScanRunner.tsx
frontend/src/components/ui/: button.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Index.tsx  Landing.tsx  Login.tsx  Signup.tsx  TestPage.tsx
shadow_scan_backend/: .gitignore  Cargo.toml  Dockerfile
shadow_scan_backend/migrations/: 20250806073328_initial_schema.sql
shadow_scan_backend/src/: app_state.rs  routes.rs
shadow_scan_backend/src/auth/: handler.rs  middleware.rs  mod.rs  password.rs
shadow_scan_backend/src/db/: feedback_repo.rs  scan_repo.rs  schema.rs  user_repo.rs
shadow_scan_backend/src/handlers/: health.rs
shadow_scan_backend/src/models/: mod.rs  user.rs
